--- a/react/hello/src/App.css
+++ b/react/hello/src/App.css
@@ -1,5 +1,4 @@
 .App {
-  text-align: center;
 }
 
 .App-logo {
@@ -35,4 +34,10 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.console {
+  background-color: #000000;
+  height: 200px;
+  width: 800px;
 }
