--- a/react/hello/src/App.css
+++ b/react/hello/src/App.css
@@ -13,7 +13,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #ffffff;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -36,8 +36,33 @@
   }
 }
 
+
+.editor-header{
+  background-color: rgb(57, 57, 58);
+  font-size: 14px;
+  text-align: center;
+  font-weight: bold;
+  padding: 3px;
+}
+
 .console {
-  background-color: #000000;
-  height: 200px;
+  background-color: rgb(39, 40, 35);
+  font-size: 14px;
+  height: 30vh;
   width: 800px;
+  overflow: auto;
+  white-space: pre-wrap;
+}
+
+.console-header{
+  background-color: rgb(58, 58, 57);
+  font-size: 14px;
+  text-align: center;
+  font-weight: bold;
+  padding: 3px;
+}
+
+.run-button{
+  margin: 30px;
+  width: 100px;
 }
